--- a/index.html
+++ b/index.html
@@ -334,7 +334,6 @@ rel="stylesheet">
       </p>  
    </div> 
 
-    <div class="soc-box">
 
    <div class="footer-media">
    <h3 class="social-word">Social media</h3>
@@ -372,24 +371,20 @@ rel="stylesheet">
    
    <!-- Subscribe   -->
 
-   
-   <div class="buton-subscr">
-   <h3 class="subtitle-footer">Subscribe</h3>
-   <form class="subtitle-box" name="subscribe">
-      <div class="">
-      <label for="email" class="email-sub">Email</label>
-     <input class="content-email" type="email" name="user-email" id="user-email" required />
-   </div>
 
-   <div class="button-subs-box">
-      <div class="bt-sub">
+   <form class="subtitle-box" name="subscribe">
+      <div class="buton-subscr">
+      <h3 class="subtitle-footer">Subscribe</h3>
+      <label for="email" class="email-sub"></label>
+      <span class="contein-subsc"></span>
+     <input class="content-email" type="email" name="user-email" id="user-email" placeholder="E-mail" required />
          <button type="submit" class="button-subs">Subscribe
             <svg class="telegram" width="24" height="24">
                <use href="./images/icons.svg#icon-icon"></use>
             </svg>
          </button>
+         </span>
       </div>
-   </div>
    
    </form>
    </div>
