--- a/index.html
+++ b/index.html
@@ -373,18 +373,18 @@ rel="stylesheet">
 
 
    <form class="subtitle-box" name="subscribe">
-      <div class="buton-subscr">
       <h3 class="subtitle-footer">Subscribe</h3>
-      <label for="email" class="email-sub"></label>
-      <span class="contein-subsc"></span>
-     <input class="content-email" type="email" name="user-email" id="user-email" placeholder="E-mail" required />
+                                     <!--<label for="email" class="email-sub"></label>-->
+                                     <!--<span class="contein-subsc"></span>-->
+      <div class="box-button-sub">
+     <input class="content-email" type="email" name="users-email" id="users-email" placeholder="E-mail" required />
          <button type="submit" class="button-subs">Subscribe
-            <svg class="telegram" width="24" height="24">
-               <use href="./images/icons.svg#icon-icon"></use>
+            <svg class="telegram">
+               <use href="./images/icons.svg#icon-frame"></use>
             </svg>
          </button>
+         </div>
          </span>
-      </div>
    
    </form>
    </div>
@@ -414,17 +414,17 @@ rel="stylesheet">
       </p>
       </div>
          
-      <label class="form-label" for="user-name">Name
+      <label class="form-label-name" for="user-name">Name</labels>
          <div class="input-form">
       <input class="content" type="text" name="user-name" id="user-name" required autofocus />
       <svg class="icon-form" width="18" height="24px">
          <use href="./images/icons.svg#icon-person-black"></use>
       </svg>
       </div>
-      </labels>
+     
 
 
-      <label class="form-label" for="user-phone">Phone</labels>
+      <label class="form-label-phone" for="user-phone">Phone</labels>
          <div class="input-form">
       <input class="content" type="tel" name="user-phone" id="user-phone" required/>
       <svg class="icon-form" width="18" height="24px">
@@ -433,7 +433,7 @@ rel="stylesheet">
       </div>
 
 
-      <label class="form-label" for="user-email">Email</labels>
+      <label class="form-label-email" for="user-email">Email</labels>
          <div class="input-form">
       <input class="content" type="email" name="user-email" id="user-email" required/>
       <svg class="icon-form" width="18" height="24px">
