--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ rel="stylesheet">
                <svg class="image-svg">
                   <use href="./images/icons.svg#icon-antenna"></use>
                </svg>
-            </a>
+
            </div>
             <h3 class="section-subtitle">Strategy</h3>
             <p class="section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -71,7 +71,7 @@ rel="stylesheet">
                <svg class="image-svg">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                </svg>
-            </a>
+
             </div>
             <h3 class="section-subtitle">Punctuality</h3>
             <p class="section-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
@@ -81,7 +81,7 @@ rel="stylesheet">
                <svg class="image-svg">
                   <use href="./images/icons.svg#icon-clock"></use>
                </svg>
-            </a>
+
             </div>
             <h3 class="section-subtitle">Diligence</h3>
             <p class="section-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
@@ -99,7 +99,6 @@ rel="stylesheet">
          </li> 
       </ul>
    </div>
-  </div>
 </section>
 <section class="section-many-texst">
    <div class="container">
@@ -110,7 +109,6 @@ rel="stylesheet">
         <li class="images-comp"><img src="./images/img2.jpg" alt="notification to the phone" width="360" height="300"></li>
         <li class="images-comp"><img src="./images/img3.jpg" alt="photo to phone" width="360" height="300"></li>
       </ul>
-   </div>
    </div>
 </section>
 <section class="page-aside">
@@ -375,8 +373,7 @@ rel="stylesheet">
 
    <form class="subtitle-box" name="subscribe">
       <h3 class="subtitle-footer">Subscribe</h3>
-                                     <!--<label for="email" class="email-sub"></label>-->
-                                     <!--<span class="contein-subsc"></span>-->
+                                     
       <div class="box-button-sub">
      <input class="content-email" type="email" name="users-email" id="users-email" placeholder="E-mail" required />
          <button type="submit" class="button-subs">Subscribe
@@ -385,14 +382,11 @@ rel="stylesheet">
             </svg>
          </button>
          </div>
-         </span>
    
    </form>
    </div>
     
 
-
-   </div>
   </footer>
   <!-- modal  -->
 
@@ -416,39 +410,41 @@ rel="stylesheet">
 
 
    <label class="form-label-name" for="user-name">
-   <span class="span-contact">Name</span></label>
+   <span class="span-contact">Name</span>
    <div class="input-form">
       <input class="content" type="text" name="user-name" id="user-name" required autofocus />
       <svg class="icon-form" width="18" height="24px">
          <use href="./images/icons.svg#icon-person-black"></use>
       </svg>
    </div>
-
+</label>
 
 
    <label class="form-label-phone" for="user-phone">
-      <span class="span-contact">Phone</span></label>
+      <span class="span-contact">Phone</span>
    <div class="input-form">
       <input class="content" type="tel" name="user-phone" id="user-phone" required />
       <svg class="icon-form" width="18" height="24px">
          <use href="./images/icons.svg#icon-phone-black"></use>
       </svg>
    </div>
+   </label>
 
 
    <label class="form-label-email" for="user-email">
-      <span class="span-contact">Email</span></label>
+      <span class="span-contact">Email</span>
    <div class="input-form">
       <input class="content" type="email" name="user-email" id="user-email" required />
       <svg class="icon-form" width="18" height="24px">
          <use href="./images/icons.svg#icon-email-black"></use>
       </svg>
    </div>
+   </label>
 
    <label class="form-label-coment" for="user-coment">
-      <span class="span-contact">Comment</span></label>
+      <span class="span-contact">Comment</span>
    <textarea class="form-input" name="user-coment" id="user-coment" placeholder="Text input"></textarea>
-
+</label>
   
 
    <div class="privacy-policy">
